--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,7 +7,7 @@
           initial-scale=1.0">
     <title>RuFREErn</title>
 
-          <link href="output.css" rel="stylesheet">
+          <link href="../styles/output.css" rel="stylesheet">
 </head>
 
 <body>
@@ -18,24 +18,27 @@
 
 <div class="my-4"></div>
 
-<h2 class="text-black text-center text-3xl font-bold">Login</h2>
+<h2 class="text-black text-center text-3xl font-bold">Sign Up</h2>
 
 <div class="justify-center flex flex-col w-1/2 mx-auto" >
-<div class="my-8"></div>
+<div class="my-4"></div>
+<input type="text" class="w-full justify-center p-2 border-2 border-gray-300 rounded-lg" placeholder="Name" id="name">
 
-<input type="text" class="w-full justify-center p-2 border-2 border-gray-300 rounded-lg" placeholder="Email" id="email">
+<div class="my-4"></div>
+
+<input type="email" class="w-full justify-center p-2 border-2 border-gray-300 rounded-lg" placeholder="Email" id="email">
 
 <div class="my-4"></div>
 
 <input type="password" class="w-full justify-center p-2 border-2 border-gray-300 rounded-lg" placeholder="Password" id="password">
 <div class="my-6"></div>
-<button class="bg-amber-500 text-white text-2xl rounded-full py-2 w-fit px-8 mx-auto hover:opacity-90 active:opacity-80">Login</button>
+<button class="bg-amber-500 text-white text-2xl rounded-full py-2 w-fit px-8 mx-auto hover:opacity-90 active:opacity-80">Sign Up</button>
 </div>
 
-<div class="absolute bottom-24 flex flex-col justify-center text-lg right-0 left-0 m-auto  text-black text-center">
-<p>Don't have an accout?</p>
+<div class="absolute bottom-24 flex flex-col justify-center  text-lg right-0 left-0 m-auto  text-black text-center">
+<p>Already have an account?</p>
 
-<a class="hover:underline active:opacity-80" href="signup.html">Sign Up</a>
+<a class="hover:underline active:opacity-80" href="login.html">Login</a>
 
 </div>
 
