--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@ LOGOUT
 
 
 <div class="flex flex-row justify-between md:justify-center md:gap-x-8 items-center text-white border-b-2 border-white py-4  ">
-    <img src="images/person.svg" alt="person">
+    <img src="../images/person.svg" alt="person">
 
     <div class="flex flex-col text-left mr-8 whitespace-nowrap">
         <h3 id="name">Name</h3>
