fixed url for css

--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
           initial-scale=1.0">
     <title>RuFREErn</title>
 
-          <link href="../styles/output.css" rel="stylesheet">
+          <link href="{{ url_for('styles',filename='styles/output.css') }}" rel="stylesheet">
 </head>
 
 <body>
