--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
           initial-scale=1.0">
     <title>RuFREErn</title>
 
-          <link href="../styles/output.css" rel="stylesheet">
+          <link href="{{ url_for('styles',filename='styles/output.css') }}" rel="stylesheet">
 </head>
 
 <body>
@@ -79,7 +79,7 @@ LOGOUT
 
 
 <div class="flex flex-row justify-between md:justify-center md:gap-x-8 items-center text-white border-b-2 border-white py-4  ">
-    <img src="../images/person.svg" alt="person">
+    <img src="{{ url_for('images',filename='images/person.svg') }}" alt="person">
 
     <div class="flex flex-col text-left mr-8 whitespace-nowrap">
         <h3 id="name">Name</h3>
