--- a/templates/login.html
+++ b/templates/login.html
@@ -20,17 +20,21 @@
 
 <h2 class="text-black text-center text-3xl font-bold">Login</h2>
 
+<form action="/" method="post">
 <div class="justify-center flex flex-col w-1/2 mx-auto" >
 <div class="my-8"></div>
 
-<input type="text" class="w-full justify-center p-2 border-2 border-gray-300 rounded-lg" placeholder="Email" id="email">
+<input type="text" class="w-full justify-center p-2 border-2 border-gray-300 rounded-lg" placeholder="Email" id="email" name="email">
+<input type="text" class="w-full justify-center p-2 border-2 border-gray-300 rounded-lg" placeholder="UserName" id="email" name="UserName">
 
 <div class="my-4"></div>
 
-<input type="password" class="w-full justify-center p-2 border-2 border-gray-300 rounded-lg" placeholder="Password" id="password">
+<!-- <input type="password" class="w-full justify-center p-2 border-2 border-gray-300 rounded-lg" placeholder="Password" id="password"> -->
 <div class="my-6"></div>
-<button class="bg-amber-500 text-white text-2xl rounded-full py-2 w-fit px-8 mx-auto hover:opacity-90 active:opacity-80">Login</button>
+<input type="submit" class="btn btn-primary mb-3 w-50" value="Submit" name="submit"></input>
 </div>
+</form>
+
 
 <div class="absolute bottom-24 flex flex-col justify-center text-lg right-0 left-0 m-auto  text-black text-center">
 <p>Don't have an accout?</p>
