added login system and signup hope it works

--- a/templates/login.html
+++ b/templates/login.html
@@ -37,7 +37,7 @@
 
 
 <div class="absolute bottom-24 flex flex-col justify-center text-lg right-0 left-0 m-auto  text-black text-center">
-<p>Don't have an accout?</p>
+<p>Don't have an account?</p>
 
 <a class="hover:underline active:opacity-80" href="signup.html">Sign Up</a>
 
