--- a/templates/signup.html
+++ b/templates/signup.html
@@ -24,11 +24,13 @@
 
 <div class="justify-center flex flex-col w-1/2 mx-auto" >
 <div class="my-4"></div>
-<input type="text" class="w-full justify-center p-2 border-2 border-gray-300 rounded-lg" placeholder="Name" id="name" name="name">
+<input type="email" class="w-full justify-center p-2 border-2 border-gray-300 rounded-lg" placeholder="Email" id="email" name="email">
+
 
 <div class="my-4"></div>
+<input type="text" class="w-full justify-center p-2 border-2 border-gray-300 rounded-lg" placeholder="Name" id="name" name="name">
 
-<input type="email" class="w-full justify-center p-2 border-2 border-gray-300 rounded-lg" placeholder="Email" id="email" name="email">
+
 
 <div class="my-4"></div>
 
@@ -42,7 +44,7 @@
 <div class="absolute bottom-24 flex flex-col justify-center  text-lg right-0 left-0 m-auto  text-black text-center">
 <p>Already have an account?</p>
 
-<a class="hover:underline active:opacity-80" href="login.html">Login</a>
+<a class="hover:underline active:opacity-80" href="{{ url_for('main') }}">Login</a>
 
 </div>
 
