--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="flex flex-col justify-center mt-32">
-<h1 class="text-6xl font-bold text-amber-500 text-center">RuFREErn</h1>
+<h1 class="text-6xl font-bold text-amber-500 text-center">RuFREErn {{message}}</h1>
 
 <div class="mt-24"></div>
 
