added error message

--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
 
 <div class="my-4"></div>
 
-<h2 class="text-black text-center text-3xl font-bold">Login</h2>
+<h2 class="text-black text-center text-3xl font-bold">Login {{message}}</h2>
 
 <form action="/" method="post">
 <div class="justify-center flex flex-col w-1/2 mx-auto" >
