--- a/templates/signup.html
+++ b/templates/signup.html
@@ -18,7 +18,7 @@
 
 <div class="my-4"></div>
 
-<h2 class="text-black text-center text-3xl font-bold">Sign Up</h2>
+<h2 class="text-black text-center text-3xl font-bold">Sign Up {{message}}</h2>
 
 <form action="/" method="post">
 
